Bug 1796779 - Fix missing space in Canvas2d font serialization. r=gfx-reviewers,jrmuizel, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D159941